# tengine

./: .clang-format  .codeassistant_config.json  CMakeLists.txt  README.md  TODO  codecompanion-workspace.json  conan_debug_linux  conanfile.py  logfile
code/: CMakeLists.txt  engine.cpp  engine.h  resource_registry.h
code/core/: CMakeLists.txt  handle.h  io.cpp  io.h  lifetime.h  output.h  types.h
code/core/ds/: CMakeLists.txt  ds_array_dynamic.cpp  ds_array_dynamic.h  ds_array_static.h  ds_bitarray.h  ds_dynamic_sparse_array.h  ds_hashmap.h  ds_sparse_array.h  ds_string.cpp  ds_string.h
code/core/ds/fnv-1a/: fnv.h  hash_64a.cpp  longlong.h
code/core/memory/: CMakeLists.txt  arena.cpp  arena.h  handles.h
code/exec/: CMakeLists.txt
code/exec/fightspace/: CMakeLists.txt  main.cpp  simulation.cpp  simulation.h  ui.cpp  ui.h
code/exec/fightspace/shaders/: compile_copy.sh  shader.frag  shader.vert  shader_ui.frag  shader_ui.vert
code/exec/play/: CMakeLists.txt  main.cpp
code/exec/play/shaders/: compile_copy.sh  shader.frag  shader.vert
code/exec/play2/: CMakeLists.txt  main.cpp
code/exec/play2/shaders/: shader.frag  shader_ui.frag  shader_ui.vert
code/render/: CMakeLists.txt  defines.h  fonts.cpp  fonts.h  frame.cpp  frame.h  handles.h  mesh.cpp  mesh.h  meshes.cpp  meshes.h  render.cpp  render.h  textures.cpp  textures.h  ui.cpp  ui.h  vertex_buffer.cpp  vertex_buffer.h
code/render/shaders/: compile_copy.sh  shader.frag  shader.vert
code/render/vulkan/: CMakeLists.txt  buffers.cpp  buffers.h  command_buffers.cpp  command_buffers.h  common.cpp  common.h  context.cpp  context.h  debug.cpp  debug.h  device.cpp  device.h  glm_includes.h  handles.h  image.cpp  image.h  images.cpp  images.h  index_buffers.cpp  index_buffers.h  pipelines.cpp  pipelines.h  render_pass.cpp  render_pass.h  samplers.cpp  samplers.h  ssbo.cpp  ssbo.h  swap_chain.cpp  swap_chain.h  textures.cpp  textures.h  ubos.cpp  ubos.h  ubos_old.cpp  ubos_old.h  vertex.cpp  vertex.h  vertex_buffers.cpp  (+7 more)
code/ui/: CMakeLists.txt  renderer_SDL3.cpp  ui.cpp  ui.h
exec/: fightspace  fightspace.cap  frag.spv  frag_ui.spv  play  vert.spv  vert_ui.spv
test/: CMakeLists.txt  test_datastructures.cpp
util/buildserver/: buildserver.go  go.mod  go.sum  private-key.pem  tengine-buildserver.2022-02-04.private-key.pem
util/conan/profiles/: conan_debug_linux  conan_release_linux
